[project]
name = "balatro_gym"
version = "0.0.1"
description = "A gym wrapper for the balatro game."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.1.0"
    
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6.2",
    "black>=25.1.0",
    "mypy>=1.15.0",
]

[tool.hatch.build]
include = ["src/*", "tests"]
